--- a/cssmain.css
+++ b/cssmain.css
@@ -13,11 +13,12 @@ body {
     height: 100vh;
     scroll-snap-type: x mandatory;
     white-space: nowrap;
+    overflow: hidden;
     }
     
 .main{
     width: 100vw;
-    height: 100vh;
+    height:100vh;
     display: flex;
     justify-content: center;
     color:#563832;
@@ -37,9 +38,17 @@ body {
     height: 100vh;
     display: flex;
     justify-content: center;
-    align-items: center;
     font-size: 2rem;
     scroll-snap-align: start;
     text-align: center;
+    background-color: green;
+    flex-direction: column;
+    font-size: 30px;
 
+}
+
+.footer {
+    height: 30px;
+    padding: 20px;
+    margin:20px;
 }
