--- a/cssmain.css
+++ b/cssmain.css
@@ -52,3 +52,10 @@ body {
     padding: 20px;
     margin:20px;
 }
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+}
