--- a/cssmain.css
+++ b/cssmain.css
@@ -43,19 +43,48 @@ body {
     text-align: center;
     background-color: green;
     flex-direction: column;
-    font-size: 30px;
+    font-size: 15px;
 
 }
+
+
+.knappar {
+    top:20px;
+    right:20px;
+    position:absolute;
+    right:0px;
+    margin: 20px;
+    padding: 0;
+    z-index: 10;
+    
+}
+
+.knappar a {
+    display: flex;
+    text-decoration: none;
+    background: #F4E1C1;
+    color: #3C5A36;
+    padding: 10px 20px;
+    border-radius: 5px;
+    margin: 5px;
+    font-size: 18px;
+    font-weight: bold;
+    display: inline-block;
+    transition: 0.3s;
+    
+
+
+}
+
+.knappar a:hover {
+    background: #3C5A36;
+    color: #F4E1C1;
+}
+
+
 
 .footer {
     height: 30px;
     padding: 20px;
     margin:20px;
-}
-
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 20px;
 }
