--- a/cssmain.css
+++ b/cssmain.css
@@ -7,10 +7,10 @@
 body {
     display: flex;
     flex-direction: row; 
-    width: 100vw;  
-    height: 100vh;  
+    width: 100vw;   
     overflow-x: scroll;  
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    max-height: 100vh;  
 }
 
 .header1 {
@@ -19,29 +19,45 @@ body {
     justify-content: center;
     height: 100px;
     padding: 18px;
-    background-color: #A333;
+    background-color: #333;
     position: fixed;
     top: 0;
     width: 100%;
     z-index: 10; 
+    color: white;
 }
 
 .storbild {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 5px;
+    padding-top: 10px;
     gap: 5px;
     font-size: 35px;
     flex-grow: 1; 
     margin-top: 100px;
     margin-bottom: 100px;
-    width: 100vw;  
+    width: 100vw; 
+    
 }
 
 .storbild img {
     height: 300px;
     width: 625px;
+}
+
+
+.mitten{
+    display: flex;
+    flex-direction: row;
+    width: 200vw;
+}
+.ingångssida, .om-oss {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .footer {
@@ -62,10 +78,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100vw;  
+    width: fit-content;  
     height: 100vh;
-    background-color: #f0f0f0;  
+    background-color: green;  
     font-size: 30px;
     color: #333;
     text-align: center;
+    flex-direction: row;
+    width: 200vw;
 }
