--- a/cssmain.css
+++ b/cssmain.css
@@ -11,6 +11,9 @@ body {
     overflow-x: scroll;  
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     max-height: 100vh;  
+    overflow-x: auto;  
+    overflow-y: hidden; 
+    height: 100vh; 
 }
 
 .header1 {
@@ -48,12 +51,18 @@ body {
 
 
 .mitten{
-    display: flex;
-    flex-direction: row;
-    width: 200vw;
+    
+        display: flex;
+        flex-direction: row;
+        width: 400vw; 
+        height: 100vh;
+        overflow-x: auto;
+        overflow-y: hidden; 
+        scroll-behavior: smooth; 
+    
 }
 .ingångssida, .om-oss {
-    width: 100vw;
+    width: 400vw;
     height: 100vh;
     display: flex;
     align-items: center;
@@ -78,12 +87,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: fit-content;  
     height: 100vh;
     background-color: green;  
     font-size: 30px;
     color: #333;
     text-align: center;
     flex-direction: row;
-    width: 200vw;
+    width: 300vw;
 }
