--- a/cssmain.css
+++ b/cssmain.css
@@ -73,14 +73,16 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100px;
+    height: 50px;
     background-color: #333;
     color: white;
     padding: 20px;
     position: fixed;
     bottom: 0;
     width: 100%;
-    z-index: 10; 
+    z-index: 10;
+    gap: 70px;
+
 }
 
 .om-oss {
