--- a/cssmain.css
+++ b/cssmain.css
@@ -41,6 +41,7 @@ body {
     margin-top: 100px;
     margin-bottom: 100px;
     width: 100vw; 
+    color: white;
     
 }
 
@@ -59,6 +60,9 @@ body {
         overflow-x: auto;
         overflow-y: hidden; 
         scroll-behavior: smooth; 
+        background-image: url(planka.png);
+        background-repeat: no-repeat;
+        background-size: cover;
     
 }
 .ingångssida, .om-oss {
@@ -90,9 +94,9 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: green;  
+    
     font-size: 30px;
-    color: #333;
+    color: white;
     text-align: center;
     flex-direction: row;
     width: 200vw;
@@ -118,8 +122,8 @@ body {
 .knappar a {
     display: flex;
     text-decoration: none;
-    background: #F4E1C1;
-    color: #3C5A36;
+    background: white;
+    color: #333;
     padding: 10px 20px;
     border-radius: 5px;
     margin: 5px;
@@ -135,7 +139,7 @@ body {
 }
 
 .knappar a:hover {
-    background: #3C5A36;
-    color: #F4E1C1;
+    background: gray;
+    color: #333;
 }
 
