--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body {
     background-color: #333;
     padding: 15px;
     text-align: center;
+    height: 100px;
+    color: white;
 }
 
 .navbar a {
