--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-image: url('bakgrund.png');
@@ -91,7 +91,7 @@ body {
     background-color: #333;
     color: white;
     padding: 20px;
-    position: fixed;
+    
     bottom: 0;
     width: 100%;
     z-index: 10;
