--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 body {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-image: url('bakgrund.png');
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
+    
 }
 .navbar {
     background-color: #333;
@@ -91,7 +92,7 @@ body {
     background-color: #333;
     color: white;
     padding: 20px;
-    
+    position: fixed;
     bottom: 0;
     width: 100%;
     z-index: 10;
