--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-image: url('bakgrund.png');
+    background-image: url('planka.png');
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
