--- a/cssmain.css
+++ b/cssmain.css
@@ -14,6 +14,7 @@ body {
     overflow-x: auto;  
     overflow-y: hidden; 
     height: 100vh; 
+    background: url(planka.png);
 }
 
 .header1 {
@@ -154,6 +155,9 @@ body {
     border-radius: 8px;
     text-align: center;
     height: 400px;
+    align-items: center;
+    justify-content: center;
+
 }
 
 h2 {
